usecases/models/gpt-oss-120b/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gpt-oss-120b
  labels:
    app.kubernetes.io/name: gpt-oss-120b
    app.kubernetes.io/component: route
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  to:
    kind: Service
    name: gpt-oss-120b-route-svc
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
